--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JATE",
+  "name": "Contact",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
@@ -24,7 +24,6 @@
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
-    "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2"
   }
 }
